fix(fin-home): added wrapping for dashboard and correct spacing around and inside the cards

--- a/client/src/app/home/home-dashboard/home-dashboard.component.css
+++ b/client/src/app/home/home-dashboard/home-dashboard.component.css
@@ -1,5 +1,5 @@
 .grid-container {
-    margin: 20px;
+    margin: 0;
 }
 
 .more-button {
@@ -18,11 +18,12 @@
 }
 
 .dashboard-tile {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
+    padding: 8px;
+    margin: 8px;
     width: 100%;
     height: 100%;
+}
+
+.dashboard-tile-title {
+    margin: 15px 0;
 }
